--- a/Playground/index.html
+++ b/Playground/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input type="text" placeholder="Type something..." />
-
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
